<resources>
    <string name="app_name">HopeFinance</string>
    <string name="zxh">zxh</string>

    <string name="test">测试</string>
    <string name="testtest">测试测试测试测试测试测试测试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_net_connect">当前网络不畅通</string>
    <string name="title">标题</string>
    <string name="title_right_text">标题右侧</string>
    <string name="assets">资产</string>
    <string name="hope_treasure">希望宝</string>
    <string name="choice">精选</string>
    <string name="home">首页</string>
    <string name="error_data">数据错误，请稍后重试</string>
    <string name="percent">%</string>
    <string name="account_immediately">立即开户</string>
    <string name="buy_product">购买产品</string>
    <string name="earn_money">立即赚钱</string>
    <string name="choose_immediately">选择支付</string>
    <string name="search">搜索</string>
    <string name="unit_yuan">元</string>


    <string name="hint1">七日年化利率(%)</string>
    <string name="hint4">昨日收益(元)</string>
    <string name="hint5">累计收益(元)</string>
    <string name="hint6">开户后可直接购买新希望产品</string>
    <string name="hint7">万份收益(元)</string>
    <string name="login">登录</string>

</resources>
