<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="cn.xwjrfw.p2p.activity.main.ChoiceFragment">

    <include layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp425"
                android:background="@mipmap/fund_background">

                <TextView
                    style="@style/text_color_white"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp50"
                    android:text="@string/hint1"
                    android:textSize="@dimen/sp14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp100"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_rate_number"
                        style="@style/text_color_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="3.5"
                        android:textSize="@dimen/sp90" />

                    <TextView
                        style="@style/text_color_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/percent"
                        android:textSize="@dimen/sp55" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp25"
                android:layout_marginRight="@dimen/dp25"
                android:layout_marginTop="@dimen/dp25"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_open_account"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:background="@drawable/selector_button_red_gray"
                    android:text="@string/account_immediately"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_buy_product"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_weight="1"
                    android:background="@drawable/selector_button_border_red_gray"
                    android:text="@string/buy_product"
                    android:textColor="@color/text_red"
                    android:textSize="@dimen/sp16" />

                <Button
                    android:id="@+id/button_earn_money"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_weight="1"
                    android:background="@drawable/selector_button_red_gray"
                    android:text="@string/earn_money"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp25"
                android:layout_marginRight="@dimen/dp25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp19"
                    android:layout_height="@dimen/dp15"
                    android:src="@mipmap/fund_cart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:text="@string/hint6"
                    android:textColor="@color/text_red"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
