<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_to_make_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical"
    tools:context="cn.xwjrfw.p2p.activity.fund.ToMakeMoneyActivity">

    <include layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:background="@color/text_red">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/hint4"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/textView_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="@dimen/sp40" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:text="总金额" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:text="0.00"
            android:textColor="@color/text_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_yuan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_marginTop="@dimen/dp10"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/hint7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:text="0.00"
                android:textColor="@color/text_red"
                android:textSize="@dimen/sp18" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/hint5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:text="0.00"
                android:textColor="@color/text_red"
                android:textSize="@dimen/sp18" />
        </RelativeLayout>
    </LinearLayout>

    <lecho.lib.hellocharts.view.LineChartView
        android:paddingRight="@dimen/dp10"
        android:id="@+id/lineChartView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:layout_marginTop="@dimen/dp10"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:background="@color/white" />
</LinearLayout>
